# pan_tilt

./: .gitignore  .gitmodules  README.md  spi_master_vhdl.vhd
Datasheets/: project_task_diagram.drawio
computer/: CMakeLists.txt  compile_commands.json
computer/lib/: CMakeLists.txt
computer/lib/seriallib/: CMakeLists.txt  serialib.cpp  serialib.h
computer/src/: AngleHandler.cpp  CMakeLists.txt  Controller.cpp  SensorFusion.cpp  Vision.cpp  main.cpp  test-setpoint.cpp  test-vision.cpp  test.cpp
computer/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  UARTAngleHandler.cpp  UARTAngleHandler.h  main.cpp
computer/src/inc/: AngleHandler.h  Controller.h  SensorFusion.h  Vision.h
computer/src/test/: CMakeLists.txt  SensorFusion.cpp  SensorFusion.h  main.cpp
computer/src/tracking/: AngleHandler.cpp  AngleHandler.h  CMakeLists.txt  Controller.cpp  Controller.h  SensorFusion.cpp  SensorFusion.h  Vision.cpp  main.cpp  opencv.cpp
computer/src/vision/: CMakeLists.txt  Makefile  auto_tracking.h  main.cpp  manuel_tracking.h
control-sys/: Control.md
control-sys/data/: data_trans.py  data_trans_speed.py  setup.txt  tilt.py
control-sys/data/raw/: pan_8or-8.csv  (+4 more)
control-sys/data_analysis/: Identification.m  Identification.sid  PIDtuner.m  pansys.m
control-sys/regulering/: DC_motor_Lag_PID.m  Regulering.m  Regulering.mw  System_med_egne_værdier.mlx  license.txt
data/: 0-15KP0-01KD.csv  0-1KP.csv  0-1KP0-01KD.csv  0-22KPP0-015KDP0-35KPT3-2OFF.csv  0-22KPP0-015KDP0-35KPT3-2OFFv2.csv  0-22KPP0-017KDP0-35KPT3-2OFF.csv  0-2KP0-01KD.csv  0-2KPP0-01KDP0-35KPT3OFF.csv  0-2KPP0-3KPT3OFF.csv  0-3KP0-02KD2-7OFF.csv  0-3KP0-02KD3OFF.csv  1716553251.csv  1716553484.csv  1716553510.csv  Pan0-2KP0-01KD2-5OFFv1.csv  Pan0-35KP0-01KD2-5OFF.csv  Pan0-3KP0-01KD2-5OFF.csv  Pan0-3KP0-01KD3OFF.csv  Pan0-3KP0KD2-5OFF.csv  Pan0-4KP0-015KD2-3OFF.csv  Pan0-4KP0-015KD2-8OFF.csv  Tilt0-2KP2-3OFF.csv  Tilt0-35KP2-3OFF.csv  Tilt0-3KP2-3OFF.csv  Tilt0-4KP2-7OFF.csv
data/Setpoint/: 0-2KP-0-2KI-0-02KD0OFF.csv  0-2KP.csv  0-2KPP0-01KDP0-3KPT3OFF.csv  0-3KP0-02KD2-5OFF.csv  0-3KP3OFF.csv
data/Setpoint-repeat/: 0-18KPP0-02KDP0-35KPTnewsetp.csv  0-22KPP0-015KDP0-35KPT.csv  0-22KPP0-01KDP0-25KPT.csv  0-22KPP0-01KDP0-35KPTv1.csv  0-22KPP0-01KDP0-35KPTv2.csv  0-2KPP0-015KDP0-35KPTv1.csv  0-2KPP0-015KDP0-35KPTv2.csv  0-2KPP0-02KDP0-35KPT.csv  0-2KPP0-02KDP0-35KPTnewsetp.csv
data/Vision/: Pan0-2KP0-01KD2-5OFFv2.csv  Pan0-3KP0-01KD2-8OFF.csv  Pan0-4KP0-015KD2-5OFF.csv  Pan0-4KP0-01KD2-5OFF.csv  Tilt0-25KP2-3OFF.csv  Tilt0-4KP2-3OFF.csv  Tilt0-4KP2-3OFFv2.csv  Tilt0-4KP2-3OFFv3.csv
embedded/: connections.md  spi.md  test.md
embedded/SPI/: SPI1.c  SPI1.h  SPI1_Read.c  SPI1_Read.h  SPI1_Write.c  SPI1_Write.h  constrain_pynq_z2  delay.c  delay.h  emp_type.h  led.c  led.h  main.c  spi_main_v2  spi_main_vhdl_v1  tm4c123gh6pm.h  uart.c  uart.h
embedded/UART_protocol/: Makefile  gpio.c  gpio.h  main.c  startup_gcc.c
embedded/controller/: Makefile  compile_flags.txt  start_openocd.sh
embedded/data_collection/: gpio.c  gpio.h  main.c  pwm.c  pwm.h  uart.c  uart.h
embedded/data_collection_new/: main.c  systick.c  systick.h
fpga/: main_program.bit
fpga/SPI/: PYNQ-Z2_v1.0.xdc  makefile  spi.vhdl  spi_slave.vhd  spi_tb.ghw  spi_tb.vhdl  spi_test.vhdl  vhdl_ls.toml  work-obj08.cf
fpga/SPI_backup/: spi_main_v2  spi_main_vhdl_v1
fpga/motor_interfacing/: ClockDivider.v  and_gate.vhd  complex_comp.vhd  encoder_interface.vhd  not_gate.vhd  or_gate.vhd  variable_counter.vhd
fpga/testspi/: makefile  spi_tb.ghw  spi_tb.vhdl  work-obj08.cf
regulering/: DC_Motor_position.slx  DC_motor_Lag_PID.asv  System.m  system.slx  system.slxc
(+81 files in other folders)
